added form clearing

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -234,6 +234,17 @@
           $("#modal").modal("show");
           $("#submit").attr('disabled', 'disabled');
         })
+
+        $('#statement-1').val('')
+        $('#statement-2').val('')
+        $('#statement-3').val('')
+        $('#statement-4').val('')
+        $('#statement-5').val('')
+        $('#statement-6').val('')
+        $('#statement-7').val('')
+        $('#statement-8').val('')
+        $('#statement-9').val('')
+        $('#statement-10').val('')
     })
 
    
