--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -25,6 +25,9 @@
     <div class='col-12'>
       <div class='row'>
 
+        <form id='statements-form'>
+
+          <p id="form-header">All fields are required!</p>
 
         <div class="input-group input-group-lg">
           <div class="input-group-prepend">
@@ -47,8 +50,8 @@
           <div class='statement-divs'>
             <h4>Statement 1:</h4>
             <p class='statement-labels'>You like spicy food.</p>
-            <select id='statement-1' class="form-control">
-              <option>Select one</option>
+            <select name = 'statement1' id='statement-1' class="form-control" required>
+              <option >Select one</option>
               <option value='1'>1 (strongly disagree)</option>
               <option value='2'>2 (disagree)</option>
               <option value='3'>3 (neutral)</option>
@@ -195,19 +198,25 @@
         </div>
       </div>
 
+    </form>
+
   </div>
 
   <footer>
     <p> Made by Raymond Shoemaker 2019</p>
   </footer>
 
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script>
 
     $('#submit-button').on('click', function () {
       event.preventDefault();
+
+
 
       var newPerson = {
         name: $('#name-input').val().trim(),
