forgot a couple inputs

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -244,6 +244,8 @@
           $("#submit").attr('disabled', 'disabled');
         })
 
+        $('#name-input').val('')
+        $('#picture-input').val('')
         $('#statement-1').val('')
         $('#statement-2').val('')
         $('#statement-3').val('')
